@startuml transaction_class_diagram

' 스타일 설정
!define FONTNAME "Helvetica"
!define FONTSIZE 20

' 기본 스타일 설정
skinparam defaultFontName FONTNAME
skinparam defaultFontSize FONTSIZE
skinparam monochrome true
skinparam shadowing false
skinparam linetype ortho

' 레이아웃 설정
left to right direction
skinparam nodesep 60
skinparam ranksep 80
skinparam padding 8
skinparam roundcorner 20
skinparam defaultTextAlignment center

' Transaction Classes
class Transaction {
  - _version: Uint8List
  - _inputs: List<TransactionInput>
  - _outputs: List<TransactionOutput>
  - _lockTime: Uint8List
  - _isSegwit: bool
  - _paymentMap: Map<String, int>
  - changeAddressDerivationPath: String?
  - _utxoList: List<Utxo>
  + version: String
  + inputs: List<TransactionInput>
  + outputs: List<TransactionOutput>
  + lockTime: String
  + transactionHash: String
  + length: int
  + utxoList: List<Utxo>
  + totalInputAmount: int
  + {static} parse(transaction: String): Transaction
  + serialize(): String
  + getSigHash(index: int, utxo: TransactionOutput, addressType: AddressType): String
  + validateEcdsa(inputIndex: int, utxo: TransactionOutput): bool
  + validateSchnorr(inputIndex: int, utxoList: List<TransactionOutput>): bool
  + getVirtualByte(): double
}

class TransactionInput {
  - _transactionHash: Uint8List
  - _index: Uint8List
  - scriptSig: ScriptSignature
  - _sequence: Uint8List
  - witnessList: List<String>
  + transactionHash: String
  + index: int
  + sequence: int
  + length: int
  + {static} parse(input: String): TransactionInput
  + {static} parseForPsbt(input: String): TransactionInput
  + {static} forPayment(transactionHash: String, index: int): TransactionInput
  + setSignature(addressType: AddressType, signatureList: List<Signature>): void
  + setTaprootKeyPathSpendingSignature(signature: String): void
  + hasSignature(isSegwit: bool): bool
  + serialize(): String
}

class TransactionOutput {
  - _amount: Uint8List
  - _scriptPubKey: ScriptPublicKey
  - isChangeOutput: bool?
  + amount: int
  + scriptPubKey: ScriptPublicKey
  + length: int
  + {static} forPayment(amount: int, address: String): TransactionOutput
  + setAmount(amount: int): void
}

class Signature {
  - _signature: String
  - _publicKey: String
  + signature: String
  + publicKey: String
}

class Psbt {
  - psbtMap: Map<String, dynamic>
  - unsignedTransaction: Transaction?
  - inputs: List<PsbtInput>
  - outputs: List<PsbtOutput>
  - extendedPublicKeyList: List<DerivationPath>
  + fee: int
  + sendingAmount: int
  + addressType: AddressType?
  + {static} globalKeyType: Map<int, String>
  + {static} inputKeyType: Map<int, String>
  + {static} outputKeyType: Map<int, String>
}

class ScriptPublicKey {
  + commands: List<dynamic>
  + length: int
  + isP2wpkh(): bool
  + isP2pkh(): bool
  + isP2sh(): bool
  + isP2wsh(): bool
  + isP2tr(): bool
}

class Script{
    - _script: String
    + script: String
    + length: int
    + {static} parse(script: String): Script
    + {static} parseForPsbt(script: String): Script
    + {static} forPayment(amount: int, address: String): Script
    + setAmount(amount: int): void
}

' Relationships
Transaction "1" *-- "many" TransactionInput
Transaction "1" *-- "many" TransactionOutput
TransactionInput "1" *-- "1" ScriptSignature
TransactionOutput "1" *-- "1" ScriptPublicKey
Psbt "1" *-- "1" Transaction
Psbt "1" *-- "many" PsbtInput
Psbt "1" *-- "many" PsbtOutput
Psbt "1" *-- "many" DerivationPath
Script <|-- ScriptSignature
Script <|-- ScriptPublicKey

@enduml